# zenbox-mail

./: .env.example  .gitignore  DEMO.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: build.yml  release.yml
docs/: AI_PROVIDERS.md  DECISIONS.md  DISTRIBUTION.md  FOLLOWUP-PROMPTS.md  GOOGLE_OAUTH.md  SETUP.md  SHORTCUTS.md
docs/superpowers/plans/: 2026-07-01-beta-launch.md  2026-07-07-build-a-drive-contacts.md
docs/superpowers/prompts/: 2026-07-07-build-a-drive-contacts.md  2026-07-07-build-b-calendar-sync.md
docs/superpowers/specs/: 2026-07-07-google-integrations-design.md
scripts/: make-icon.mjs  set-oauth-secrets.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs  types.rs  unsplash.rs
src-tauri/src/ai/: context.rs
src-tauri/src/mail/: calendar.rs  drive.rs  gmail.rs  mock.rs  mod.rs  oauth.rs  people.rs  render.rs  sync.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/store/: mod.rs
src/components/: Button.tsx  ContactPanel.tsx  FolderSidebar.tsx  Input.tsx  Kbd.tsx  Label.tsx  NavRail.tsx  Pill.tsx  RestState.tsx  UndoToast.tsx
src/features/calendar/: CalendarPanel.tsx  CalendarWeek.tsx  EventModal.tsx
src/features/compose/: Compose.tsx  ComposeActionBar.tsx  ComposeShell.tsx  RecipientInput.tsx  useComposeController.ts
src/features/inbox/: MailScreen.tsx
src/features/onboarding/: Onboarding.tsx
src/features/palette/: CommandPalette.tsx
src/features/pickers/: DrivePicker.tsx  MovePicker.tsx  PickerShell.tsx  SendLaterPicker.tsx  SnippetPicker.tsx  SnoozePicker.tsx  ZeroSweep.tsx
src/features/search/: SearchScreen.tsx
src/features/settings/: SettingsScreen.tsx  SignatureEditor.tsx
src/features/shortcuts/: ShortcutsPanel.tsx
src/features/thread/: AskAi.tsx  InviteBar.tsx  ThreadView.tsx
src/features/zero/: Celebration.tsx
src/lib/: blurhash.ts  commands.ts  defaults.ts  email-render.test.ts  email-render.ts  ipc.ts  keyboard.ts  mock-data.ts  mock.ts  pending.test.ts  pending.ts  sanitize.ts  shortcuts-catalog.ts  types.ts  undo.ts  updater.ts
src/stores/: calendar.test.ts  calendar.ts  mail.test.ts  mail.ts  settings.test.ts  settings.ts  ui.ts
src/styles/: theme.css
