[package]
name = "zenbox-mail"
version = "0.3.0"
description = "ZenBox Mail — keyboard-first, AI-native email client"
authors = ["Swarnav S Pujari"]
license = "MIT"
edition = "2021"
default-run = "zenbox-mail"

[lib]
name = "zenbox_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# one crate, three OS keychains: Credential Manager / Keychain / Secret Service
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
base64 = "0.22"
url = "2"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
