[package]
name = "fission-mail"
version = "0.12.1"
description = "Fission Mail — keyboard-first, AI-native email client"
authors = ["Swarnav S Pujari"]
license = "MIT"
edition = "2021"
default-run = "fission-mail"

[lib]
name = "fission_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# one crate, three OS keychains: Credential Manager / Keychain / Secret Service
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
base64 = "0.22"
url = "2"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ammonia = "4"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
harper-core = { version = "2.5.0", features = ["concurrent"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
